--- a/Final project.html
+++ b/Final project.html
@@ -5,130 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Which fruit season is it? 🍒🍋</title>
-    <style>
-      .container {
-        max-width: 800px;
-        margin: 0 auto;
-      }
-      body {
-        background: rgb(249, 244, 244);
-      }
-      h1 {
-        border-radius: 10px;
-        color: rgb(249, 244, 244);
-        font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
-        font-size: 50px;
-        font-weight: lighter;
-        line-height: 30px;
-        margin: 10px 0px 5px 0px;
-        max-height: 100px;
-        text-align: center;
-
-        padding: 40px 0px 40px 0px;
-        background: #a80000f1;
-      }
-
-      h2 {
-        display: block;
-        font-family: "Courier New", Courier, monospace;
-        font-size: 25px;
-        font-weight: bold;
-        margin: 20px 50px;
-        text-align: center;
-      }
-      ul {
-        display: block;
-        list-style: none;
-        padding: 0px;
-      }
-      a {
-        color: #a80000f1;
-        display: block;
-        font-family: "Courier New", Courier, monospace;
-        font-size: 15px;
-        font-weight: bold;
-        margin: 0 auto;
-        text-align: center;
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-
-      button {
-        background: rgb(249, 244, 244);
-        border: 0;
-        border-color: #a80000f1;
-        border-radius: 10px;
-        display: block;
-        font-family: "Courier New", Courier, monospace;
-        font-size: 20px;
-        font-weight: bold;
-        margin: 0 auto;
-        padding: 5px;
-        text-align: center;
-        transition: all 200ms ease-in-out;
-      }
-      button:hover {
-        background: #a80000f1;
-        box-shadow: 5px 5px 5px rgba(0, 0, 0, 30%);
-        color: rgb(249, 244, 244);
-      }
-      hr {
-        margin: auto;
-        max-width: 150px;
-      }
-
-      .fruit-pic {
-        border-radius: 10px;
-        display: block;
-        margin: 10px auto;
-        width: 100%;
-        height: 300px;
-        object-fit: cover;
-      }
-      .text {
-        display: block;
-        font-family: "Courier New", Courier, monospace;
-        font-size: 15px;
-        font-weight: light;
-        margin: 20px 50px;
-      }
-
-      .per-reason {
-        display: block;
-        font-family: "Courier New", Courier, monospace;
-        font-size: 15px;
-        font-weight: bold;
-        margin: 20px 50px;
-      }
-
-      .per-season {
-        display: block;
-        font-family: "Courier New", Courier, monospace;
-        font-size: 25px;
-        font-weight: bold;
-        margin: 20px 50px;
-        text-align: center;
-      }
-
-      .fruit-season {
-        border-radius: 10px;
-        display: block;
-        margin: 10px auto;
-        width: 300px;
-        text-align: center;
-        object-fit: cover;
-      }
-
-      .signature {
-        display: block;
-        font-family: "Courier New", Courier, monospace;
-        font-size: 12px;
-        margin-top: 10px;
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>SEASONAL FRUIT AND VEGGIES</h1>
@@ -266,25 +143,6 @@
       <hr />
       <p class="signature">Coded by <strong>Chiara</strong></p>
     </div>
-    <script>
-      function infoCountry() {
-        let name = prompt("What's your name?");
-        let email = prompt("What's your email address?");
-        let continent = prompt("Are you from Europe?").toLowerCase().trim();
-        let button = document.querySelector("button");
-        if (continent === "yes") {
-          button.innerHTML =
-            "Hi " + name + " check the link above ☝️ and select your country";
-        } else {
-          alert(
-            "Hi " +
-              name +
-              " I will let you know where you can find more info about your region"
-          );
-        }
-      }
-      let moreInfo = document.querySelector("button");
-      moreInfo.addEventListener("click", infoCountry);
-    </script>
+    <script src="src/script.js"></script>
   </body>
 </html>
